[gd_scene load_steps=9 format=2]

[ext_resource path="res://Recursos/Enemies/spikeMan_walk2.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Enemies/spikeMan_walk1.png" type="Texture" id=2]
[ext_resource path="res://Juego/Enemigos/Pinchon.gd" type="Script" id=3]
[ext_resource path="res://Recursos/Sfx/Volon_muerte.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.2364, 2.8882 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 19.7632
height = 4.07127

[sub_resource type="Animation" id=4]
resource_name = "morir"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -38 ), Vector2( 0, 38 ), Vector2( 0, 48 ), Vector2( 0, 58 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 90.0, 135.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Morir")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Pinchon" type="KinematicBody2D"]
z_index = 50
z_as_relative = false
collision_layer = 8
collision_mask = 4
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -38 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "caminar"

[node name="ColisionPies" type="CollisionShape2D" parent="."]
modulate = Color( 0.027451, 0.0196078, 0.0196078, 1 )
position = Vector2( 1.1275, -2.74536 )
shape = SubResource( 2 )

[node name="DetectorVacio" type="RayCast2D" parent="."]
modulate = Color( 0.0313726, 0.0235294, 0.0235294, 1 )
position = Vector2( 35, 0 )
z_index = 35
z_as_relative = false
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="DetectorPared" type="RayCast2D" parent="."]
modulate = Color( 0.0313726, 0.0235294, 0.0235294, 1 )
position = Vector2( 26.591, -30.2723 )
z_index = 35
z_as_relative = false
enabled = true
cast_to = Vector2( 40, 0 )
collision_mask = 4

[node name="DetectorJugador" type="Area2D" parent="."]
collision_layer = 40
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorJugador"]
modulate = Color( 0.180392, 0.886275, 0.137255, 1 )
position = Vector2( 0, -26.9087 )
shape = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectorJugador"]
modulate = Color( 0.890196, 0.933333, 0.109804, 1 )
polygon = PoolVector2Array( -8.40679, -49.128, 6.72935, -49.5485, 0.00218201, -76.0367 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/morir = SubResource( 4 )

[node name="Morir" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -28.0
bus = "SFX"
__meta__ = {
"_editor_description_": ""
}
[connection signal="body_entered" from="DetectorJugador" to="." method="_on_DetectorJugador_body_entered"]
